feat: Добавлена стоимость услуги в Get /branch/service/details/{id_branchserv}
